# AutoClicker

./: CHANGELOG.md  LICENSE  README.md  changes.txt  getasset.py  icon.icns  main.py  pyproject.toml  version.py
.github/workflows/: main.yml
autoclicker/: __init__.py
autoclicker/core/: AutoClickerApp.py  AutoClickerUI.py  Clicker.py  KeyboardListener.py  Tooltip.py  autoclicker.py  utils.py
