[project]
name = "autoclicker"
version = "0.1.0"
description = ""
authors = [
    {name = "Keiner Alvarado",email = "kjgameplay0000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput (>=1.7.7,<2.0.0)"
]

[tool.poetry.scripts]
autoclicker = "autoclicker:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
